materia/tests/errors/string-source.typ
// expected: materia: input must be a path value
#import "/lib.typ": import-xyz
#import-xyz("/examples/data/water.xyz")
